添加数据分析部分

--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,13 @@
             <div class="col-lg-11">
                 <div class="card">
                     <div class="card-header">
-                        <h1 class="m-0">花卉识别系统</h1>
+                        <div class="d-flex justify-content-between align-items-center">
+                            <div class="flex-grow-1 text-center">
+                                <h1 class="m-0">花卉识别系统</h1>
+                            </div>
+                            <!-- 应用自定义类 -->
+                            <a href="/dp" class="btn btn-success ms-3 rounded-lg">数据分析面板</a>
+                        </div>
                         <p class="text-white-50 mb-0 mt-2">上传花卉图片，AI将自动识别花卉种类</p>
                     </div>
                     <div class="card-body">
