--- a/static/css/dp/style.css
+++ b/static/css/dp/style.css
@@ -1,145 +1,178 @@
 @charset "UTF-8";
- /* 设置代码界面的显示比例 */
-    .content {
-        width: 100%;
-        height: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-around;
-    }
-
-.chart:empty{
-	border: 1px dashed;
-	box-sizing: border-box;
-	-moz-box-sizing: border-box;
-	-webkit-box-sizing: border-box;
-	opacity: 0.3;
-}
-.chart:empty::after{
-	content: "图表";
-	position: absolute;
-	top: 50%;
-	left: 50%;
-	margin-top: -1rem;
-	margin-left: -1rem;
+.content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
 }
 
-body{
-	color: #FFF;
+.chart:empty {
+    border: 1px dashed;
+    box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+    opacity: 0.3;
+}
+
+.chart:empty::after {
+    content: "图表";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -1rem;
+    margin-left: -1rem;
+}
+
+body {
+    color: #FFF;
     margin: 0 0;
     padding: 0 0;
     background: url(images/bg.png)
 }
-.fill-parent{
-	position: absolute;
-	top: 0;
-	right: 0;
-	bottom: 0;
-	left: 0;
+
+.fill-parent {
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
-.head{
-	position: relative;
+
+.head {
+    position: relative;
     height: 3.5rem;
     background: url(images/head-bg.png) no-repeat center center;
-    background-size: 100% 100%;
+    background-size: 100% 100;
 }
-.head .title{
-	position: absolute;
-	left: 5rem;
-	width: 22%;
-	font-size: 1.8rem;
+
+.head .title {
+    position: absolute;
+    left: 5rem;
+    width: 22%;
+    font-size: 1.8rem;
     line-height: 3.5rem;
     height: 3.5rem;
-	text-align: center;
+    text-align: center;
 }
-.content{
-	position: absolute;
-	top: 4rem;
-	right: 0;
-	bottom: 0;
-	left: 0;
+
+.content {
+    position: absolute;
+    top: 4rem;
+    right: 0;
+    bottom: 0;
+    left: 0;
 }
-.layout{
-	position: absolute;
-	width: 33.33%;
+
+.layout {
+    position: absolute;
+    width: 33.33%;
 }
-.layout-left-top{
-	left: 0;
-	top: 0;
-	height: 50%;
-	width: 28%;
+
+.layout-left-top {
+    left: 0;
+    top: 0;
+    height: 50%;
+    width: 28%;
 }
-.layout-left-bottom{
-	left: 10%;
-	top: 50%;
-	height: 50%;
-	width: 40%;
+
+.layout-left-bottom {
+    left: 10%;
+    top: 50%;
+    height: 50%;
+    width: 40%;
 }
-.layout-center-top{
-	top: 0;
-	left: 28%;
-	right: 28%;
-	width: 44%;
-	height: 50%;
+
+.layout-center-top {
+    top: 0;
+    left: 28%;
+    right: 28%;
+    width: 44%;
+    height: 50%;
 }
-.layout-center-bottom{
-	top: 50%;
-	left: 53.33%;
-	right: 66.6%;
-	bottom: 0.01em;
+
+.layout-center-bottom {
+    top: 50%;
+    left: 53.33%;
+    right: 66.6%;
+    bottom: 0.01em;
 }
-.layout-right-top{
-	top: 0;
-	right: 0;
-	width: 28%;
-	height: 50%;
-    margin-right: 1.5rem; /* 添加右边距以对齐 */
-}.layout-right-bottom{
-	top: 50%;
-	right: 0;
-	bottom: 0;
+
+.layout-right-top {
+    top: 0;
+    right: 0;
+    width: 28%;
+    height: 50%;
+    margin-right: 1.5rem;
 }
-.panel{
-	position: absolute;
-	left: 0.6rem;
-	top: 0.5rem;
-	right: 0.6rem;
-	bottom: 0.5em;
+
+.layout-right-bottom {
+    top: 50%;
+    right: 0;
+    bottom: 0;
 }
-.panel::before{
-	content: "";
-	position: absolute;
-	left: 0;
-	top: 0;
-	width: 40%;
-	height: 30%;
-	background: url(images/panel-left-line.png) no-repeat left top;
+
+.panel {
+    position: absolute;
+    left: 0.6rem;
+    top: 0.5rem;
+    right: 0.6rem;
+    bottom: 0.5em;
 }
-.panel::after{
-	content: "";
-	position: absolute;
-	right: 0;
-	bottom: 0;
-	width: 40%;
-	height: 30%;
-	background: url(images/panel-right-line.png) no-repeat right bottom;
+
+.panel::before {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 40%;
+    height: 30%;
+    background: url(images/panel-left-line.png) no-repeat left top;
 }
-.panel > .title{
-	position: absolute;
-	top: 0.8rem;
-	right: 0;
-	left: 1.5rem;
-	line-height: 1.4rem;
-	font-size: 1.1rem;
-	font-weight: bold;
+
+.panel::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    width: 40%;
+    height: 30%;
+    background: url(images/panel-right-line.png) no-repeat right bottom;
+}
+
+.panel > .title {
+    position: absolute;
+    top: 0.8rem;
+    right: 0;
+    left: 1.5rem;
+    line-height: 1.4rem;
+    font-size: 1.1rem;
+    font-weight: bold;
     text-align: left;
     color: #FFF;
 }
-.panel .chart{
-	position: absolute;
-	top: 2.4rem;
+
+.panel .chart {
+    position: absolute;
+    top: 2.4rem;
     right: 1rem;
     bottom: 1rem;
     left: 1rem;
 }
 
+.layout-left-bottom {
+    left: 0;
+    top: 60%;
+    height: 60%;
+    width: 50%;
+    display: flex;
+    justify-content: space-between;
+    gap: 1%; /* 缩小图表间距 */
+}
+
+.layout-left-bottom .panel {
+    width: 52%;
+    height:500px;
+    position: relative;
+    margin: 0 2%; /* 调整边距 */
+}
